# hpcourse

hse/BPM161/sharkova/opencl-1/: main.cpp
hse/BPM161/sharkova/opencl-2/: CMakeLists.txt  main.cpp  prefix_sum.cl
